--- a/_config/slices.yml
+++ b/_config/slices.yml
@@ -8,7 +8,7 @@ Injector:
 
 Slice:
   extensions:
-    - 'VersionedDataObject'
+    - 'HeydayVersionedDataObject'
 
   dependencies:
     previewer: "%$DataObjectPreviewer"
